2016-03-16  Erwin Waterlander  <waterlan@xs4all.nl>

	New package msys-ncurses 6.0.

	* msys/msys-ncurses.xml: New for ncurses version 6.0.
	* msys/msys-package-list.xml: Added msys-ncurses.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

	* msys/msys-mksh.xml: Added missing file.

2016-02-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Reassign misplaced libmpc dependencies for GCC-4.8.1

	* mingw32/mingw32-gcc4.xml (libgcc-dll-1): Delete dependencies on...
	(libmpc-dll-2, libmpc-dll-3): ...these; reassign as appropriate, to...
	(gcc-core-4.8.1-dev): ...here.

	* common/issue.log mingw32/issue.log: Update accordingly.

2016-02-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove bogus GCC-4.9.3 dependencies.

	* mingw32/mingw32-gcc4.xml (gcc-core-dev): Make dependencies on...
	(libgomp-dll-1, libssp-dll-0): ...these specific to each GCC version.
	(libgcc-dll-1): Remove unnecessary dependency on...
	(libmpc-dll-3): ...this; reassign it where it is needed...
	(gcc-core-bin): ...here.

	* common/issue.log mingw32/issue.log: Update accordingly.

2016-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade GCC; make version 4.9.3 the preferred release.

	* mingw32/mingw32-gcc4.xml: Add v4.9.3 references for all GCC
	component packages, associated sub-packages, and library packages.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-01-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade mingwrt to version 3.21.1

	* mingw32/mingw32-runtime.xml (mingwrt): Add new version references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-01-08  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgraded package mingw32-ncurses to version 6.0-2.

	* contrib/mingw32-ncurses.xml: Created separate package
	  definitions for ncurses, libncurses, and terminfo.
	  Added libncurses-dll package.
	* contrib/issue.log: Updated accordingly.