@@ -29,6 +29,7 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
+        <release tarname="mingwrt-3.22-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dev.tar.lzma">
@@ -50,6 +51,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-3.22-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dll.tar.lzma" />
@@ -59,6 +61,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-3.22-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-lic.tar.lzma">
@@ -80,6 +83,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-3.22-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-man.tar.lzma">
@@ -120,6 +124,7 @@
       <licence tarname="w32api-%-mingw32-dev.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-3.18-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.17-2-mingw32-dev.tar.lzma" />
         <release tarname="w32api-3.17-1-mingw32-dev.tar.lzma" />
         <release tarname="w32api-3.16-1-mingw32-dev.tar.lzma" />
